--- a/.davia/assets/project-module.html
+++ b/.davia/assets/project-module.html
@@ -25,7 +25,7 @@
 <p><strong>Access Control:</strong></p>
 
 <ul>
-<li><strong>TEAM_MANAGER:</strong> Create and manage projects</li>
+<li><strong>MANAGER:</strong> Create and manage projects</li>
 <li><strong>HUMAN_RESOURCES:</strong> Full access</li>
 <li><strong>EMPLOYEE:</strong> View assigned projects</li>
 </ul>
